Fixed alignment issue re: #1169. Improved code snippet.

--- a/less/angies.less
+++ b/less/angies.less
@@ -1477,14 +1477,18 @@ p {
 		}
 		
 		&.comp-name {
+			color: @mediumGray;
 			font-size: 14px;
-		}
-		
-		&.hour {
-			margin-bottom: 15px;
-		}
+		}		
 	}
 	
+	.read-cta-block {
+		text-align: right;
+		
+		p {
+			margin-bottom: 15px;
+		}		
+	}
 } // .neighborhood-activity
 
 ul.list-search {
